tests/sema/fail/v5_fail_extend_struct.ep
# COMPILE_FAIL: extend expects an array with the same element type
struct Box {
    value: i64
}

struct Other {
    value: i64
}

fun main(): void {
    let a = new Box[1]
    let b = new Other[1]
    a.extend(b)
}
